MenuItem getDesc now returns a modifiable list